# accelerate-vulkan

./: .gitignore  CHANGELOG.md  README.md  accelerate-vulkan.cabal  cabal.project
app/: Main.hs
benchmark/FlashAttention/: bench-cpu-no-fusion.out  bench-cpu-no-fusion.out_save  bench-cpu-with-fusion.out  bench-cpu-with-fusion.out_save  bench-vk.out  bench-vk.out_save  cabal.project  flashattention.cabal
benchmark/FlashAttention/src/: Main.hs  Naive.hs
benchmark/MG/: bench-cpu-no-fusion.out  bench-cpu-no-fusion.out_save  bench-cpu-with-fusion.out  bench-cpu-with-fusion.out_save  bench-vk.out_save  mg.cabal
benchmark/MG/src/: Main.hs
benchmark/PTX_backend/FlashAttention/: bench-ptx-no-fusion.out  bench-ptx-with-fusion.out  flashattention.cabal
benchmark/PTX_backend/FlashAttention/src/: Flash_alg1.hs  Main.hs
benchmark/PTX_backend/MG/: PTX No-Fusion.out  cabal.project  mg.cabal
benchmark/PTX_backend/MG/src/: Main.hs
benchmark/PTX_backend/nbody-naive/: bench-ptx-no-fusion.out  bench-ptx-with-fusion.out  cabal.project  nbody-naive.cabal
benchmark/PTX_backend/nbody-naive/src/: Input.hs  Main.hs  NBody.hs  Physics.hs
benchmark/nbody-naive/: bench-cpu-no-fusion.out  bench-cpu-no-fusion.out_save  bench-cpu-with-fusion.out  bench-cpu-with-fusion.out_save  bench-vk.out  bench-vk.out_save  nbody-naive.cabal
benchmark/nbody-naive/src/: Main.hs
benchmark/results_analysis/: plot_FA.py  plot_FA_all.pdf_save  plot_FA_all.svg_save  plot_MG.py  plot_NB.py
benchmark/results_analysis/FlashAttention/: CPU No-Fusion.out  CPU With-Fusion (m16384).out  PTX No-Fusion.out  PTX With-Fusion (m16384).out  Vulkan (m16384).out
benchmark/results_analysis/MG/: PTX With-Fusion.out  Vulkan.out
benchmark/results_analysis/nbody/: CPU No-Fusion.out  CPU With-Fusion.out  Vulkan.out
src/Data/Array/Accelerate/Vulkan/: Common.hs  Execute.hs  Kernel.hs  Operation.hs  Type.hs
src/Data/Array/Accelerate/Vulkan/Compile/: ArrayInstr.hs  Atomic.hs  Convert.hs  Env.hs  Expression.hs  Index.hs  LeftHandSide.hs  Type.hs  Var.hs
src/Data/Array/Accelerate/Vulkan/Vulkan/: Runtime.hs  Type.hs
